tests/paczka1/fuzzy1/16418550.err
Error in line 5: S8 A995 36,8
Error in line 12: S8 A711 20,6
Error in line 15: GebW7lq41yX A995 207,14
Error in line 14: JHcsotH A142 41,3
Error in line 18: S8 A711 74,0
Error in line 13: GebW7lq41yX A995 41,9
Error in line 19: Mn4JU8ZYsv A995 46,6
Error in line 20: GebW7lq41yX S8 74,3
Error in line 17: JHcsotH A711 9,4
Error in line 22: GebW7lq41yX A995 59,8
Error in line 38: GebW7lq41yX S8 77,3
Error in line 40: C1ZMLJH3Yf A995 38,37
